Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-2004

Debugger crushes on __cxa_throw breakpoint

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P1: Critical P1: Critical
    • None
    • Qt Creator 2.0.0
    • Debugger
    • None
    • Windows Vista
    • 0e6226b0094de339fe01bc544d02ddb23e9fdb30, fbe6f968694ffdaf1d47a7eaf2e1c4e8fe16dc86

      1. Open "applicaton" example in creator. I think it could happen on any Qt example...
      2. Switch to Debug page add breakpoint on "__cxa_throw" function.
      3. Run debugging (F5)
      4. get
        >~"breakpoint.c:6481: internal-error: expand_line_sal_maybe: Assertion `found' failed.\nA problem internal to GDB has been detected,\nfurther debugging may prove unreliable.\nQuit this debugging session? "
        >~"(y or n) [answered Y; input not from terminal]\n"
        >~"breakpoint.c:6481: internal-error: expand_line_sal_maybe: Assertion `found' failed.\nA problem internal to GDB has been detected,\nfurther debugging may prove unreliable.\nCreate a core file of GDB? "
        >~"(y or n) [answered Y; input not from terminal]\n"
        dUNEXPECTED GDB STDERR: 
        
        dThis application has requested the Runtime to terminate it in an unusual way.
        dPlease contact the application's support team for more information.
        
        d
        dGDB PROCESS FINISHED, status 0, code 255
        sПроцесс gdb неожиданно завершился (код 255).
        dPLAIN ADAPTER SHUTDOWN 10
        dState changed from InferiorRunning(10) to DebuggerNotReady(0).
        

      Workaround is to use QtCreator 1.3.1. It works fine. And it have same gdb\gcc version. So I think it's not gdb problem!

        1. gdb.txt
          15 kB
          Robert Löhning
        2. backtrace.txt
          1 kB
          Robert Löhning
        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            hjk hjk
            setosha Anton Sergunov
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes