debugger: Do not automatically kill gdb on internal errors.

This improves overall debugging experience after some "mostly harmless" errors.

Reviewed-by: Friedemann Kleint
Task-number: QTCREATORBUG-2004